<resources>
    <string name="app_name" translatable="false">RubyFood</string>
    <string name="blank" translatable="false"></string>
    <string name="enter_a_title" translatable="false">Enter a title</string>
    <string name="entry_details_default_text" translatable="false">Entry Details!</string>
    <string name="submit_button_text" translatable="false">Submit</string>
    <string name="dummy_text" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="terms_conditions" translatable="false">Terms &amp; Conditions</string>
    <string name="ideal_loc" translatable="false">IDLE Alert</string>
    <string name="net_status" translatable="false">App current status:</string>
    <string name="MAP_ProjectAPIKey" translatable="false">AIzaSyAuu3Ff0neij9Y3nbg2FWn3pCsu-stZXkM</string>
    <string name="username_new" translatable="false">Username</string>
    <string name="username" translatable="false">Enter Login ID</string>
    <string name="password" translatable="false">Password</string>
    <string name="password_new" translatable="false">*********</string>
    <string name="login" translatable="false">Login</string>
    <string name="select_login" translatable="false">Select to Login</string>
    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="login_logout_msg" translatable="false">Good Internet connectivity is \nmandatory for Login &amp; Logout.</string>
    <string name="login_net_connected" translatable="false">Internet connection strength is good, you can login now.</string>
    <string name="login_net_connected1" translatable="false">You can login now.</string>
    <string name="login_net_disconnected" translatable="false">Internet is disconnected, you cannot login, please switch on the internet.</string>
    <string name="login_net_disconnected1" translatable="false">Please switch on the internet.</string>
    <string name="remember_me" translatable="false">Remember me</string>
    <string name="add_order" translatable="false">Add Order</string>
    <string name="photo_registration" translatable="false">Photo Registration</string>
    <string name="team_attendance" translatable="false">Team Attendance</string>
    <string name="clear_attendance" translatable="false">Attendance clear</string>
    <string name="photo_attd" translatable="false">Photo Attendance</string>
    <string name="view_order" translatable="false">View Order</string>
    <string name="add" translatable="false">Add</string>
    <string name="my_allowence_request" translatable="false">My Allowance Request</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="shop_detail" translatable="false">Shop Details</string>
    <string name="customer_details" translatable="false">Customer Details</string>
    <string name="order_detail" translatable="false">Order Details</string>
    <string name="view_yesterdays_route" translatable="false">View Yesterday\'s Route</string>
    <string name="assigned_areas" translatable="false">Assigned Areas</string>
    <string name="my_registered_shop" translatable="false">My Registered Shops</string>
    <string name="history" translatable="false">Timelines</string>
    <string name="traveling_history" translatable="false">Traveling history</string>
    <string name="scan_visiting_card" translatable="false">Scan Visiting Card</string>
    <string name="code_scanner" translatable="false">Code Scanner</string>
    <string name="attendance" translatable="false">Attendance</string>
    <string name="view_attendance" translatable="false">View Attendance</string>
    <string name="order_list" translatable="false">Order List</string>
    <string name="add_attendance" translatable="false">Add Attendance</string>
    <string name="ta_text" translatable="false">TA</string>
    <string name="pp_dd_text" translatable="false">View PP/DD Stock</string>
    <string name="pp_dd_header_text" translatable="false">PP/DD Stock</string>
    <string name="report" translatable="false">Report</string>
    <string name="mis" translatable="false">MIS</string>
    <string name="mis_reports" translatable="false">MIS Reports</string>
    <string name="average_shop" translatable="false">Average shop visits/day</string>
    <string name="average_time" translatable="false">Average time spent/shop</string>
    <string name="average_order" translatable="false">Average order value/shop</string>
    <string name="performance" translatable="false">Performance</string>
    <string name="gps_status" translatable="false">GPS Status</string>
    <string name="collection_details" translatable="false">Collection Details</string>
    <string name="product_list" translatable="false">Product List</string>
    <string name="cart" translatable="false">Cart</string>
    <string name="cart_details" translatable="false">Cart Details</string>
    <string name="stock_list" translatable="false">Stock List</string>
    <string name="current_stock_list" translatable="false">Current Stock Details</string>
    <string name="current_stock_product_list" translatable="false">Product Details</string>
    <string name="competetor_stock_list" translatable="false">Competitor Stock Details</string>
    <string name="new_order_scr_add_order" translatable="false">Add Order</string>
    <string name="new_order_scr_cart" translatable="false">Cart</string>
    <string name="outlet_stock_list" translatable="false">Outlet Stock List</string>
    <string name="gps_restriction" translatable="false">GPS Restriction</string>
    <string name="view_cart" translatable="false">View Cart</string>
    <string name="product_details" translatable="false">Product Details</string>
    <string name="search_product" translatable="false">Search Product(s)</string>
    <string name="sel_product" translatable="false">Select Product(s)</string>
    <string name="stock_details_pp_dd" translatable="false">Stock Details - PP/DD</string>
    <string name="outstanding_details_pp_dd" translatable="false">Outstanding Details - PP/DD</string>
    <string name="outstanding_list" translatable="false">Outstanding List</string>
    <string name="achievement" translatable="false">Achievement</string>
    <string name="average_shop_visited" translatable="false">Average Shop Visited</string>
    <string name="average_time_visited" translatable="false">Average Time Spent</string>
    <string name="average_order_visited" translatable="false">Average Order Value</string>
    <string name="my_profile" translatable="false">My Profile</string>
    <string name="stock_detail" translatable="false">Stock Details</string>
    <string name="opening_stock" translatable="false">Opening Stock</string>
    <string name="report_on_state" translatable="false">Performance Status</string>
    <string name="list_of_party" translatable="false">List of party</string>
    <string name="plan_details" translatable="false">Plan Details</string>
    <string name="reports" translatable="false">Reports</string>
    <string name="new_attendance_report" translatable="false">Attendance Report</string>
    <string name="new_visit_report" translatable="false">Visit Report</string>
    <string name="meeting_list" translatable="false">Meeting List</string>
    <string name="meeting_details" translatable="false">Meeting Details</string>
    <string name="team_details" translatable="false">Team Details</string>
    <string name="all_team_details" translatable="false">All Team Details</string>
    <string name="team_shop_details" translatable="false">Party Details </string>
    <string name="pjp_list" translatable="false">PJP List</string>
    <string name="journey_plan_list" translatable="false">List of Journey Plan</string>
    <string name="add_pjp" translatable="false">Add PJP</string>
    <string name="edit_pjp" translatable="false">Edit PJP</string>
    <string name="change_pwd" translatable="false">Change Password</string>
    <string name="area_list" translatable="false">Area Details</string>
    <string name="add_quo" translatable="false">Add Quot.</string>
    <string name="quot_list" translatable="false">Quot. List</string>
    <string name="quot_details" translatable="false">Quot. Details</string>
    <string name="edit_quot" translatable="false">Edit Quot.</string>
    <string name="all_team" translatable="false">All Team - Online</string>
    <string name="update_work_type" translatable="false">Update Your Work Type</string>
    <string name="achv_report" translatable="false">Achv. Report</string>
    <string name="achv_report_details" translatable="false">Achv. Report Details</string>
    <string name="targ_achv_report" translatable="false">Targ. vs Achv. Report</string>
    <string name="targ_achv_report_details" translatable="false">Targ. vs Achv. Report Details</string>
    <string name="leave_list" translatable="false">Leave List</string>
    <string name="apply_leave" translatable="false">Apply Leave</string>
    <string name="leave" translatable="false">Leave</string>
    <string name="task_without_colon" translatable="false">Task</string>
    <string name="task_list" translatable="false">Task List</string>
    <string name="add_task" translatable="false">Add Task</string>
    <string name="edit_task" translatable="false">Edit Task</string>
    <string name="dynamic" translatable="false">Dynamic</string>
    <string name="dynamic_list" translatable="false">Dynamic List</string>
    <string name="add_activity" translatable="false">Add Activity</string>
    <string name="edit_activity" translatable="false">Edit Activity</string>
    <string name="activities" translatable="false">Activities</string>
    <string name="myjobs" translatable="false">My Jobs</string>
    <string name="customers_title" translatable="false">Customer(s)</string>
    <string name="due_today" translatable="false">Due Today</string>
    <string name="date_wise_activities" translatable="false">Datewise Activities</string>
    <string name="activity_party" translatable="false">Activity Party(s)</string>
    <string name="entry" translatable="false">Entry</string>
    <string name="activity_details" translatable="false">Activity Details</string>
    <string name="weather" translatable="false">Weather Details</string>
    <string name="doc_repo" translatable="false">Document Repository</string>
    <string name="chat_bot" translatable="false">BreezeBot</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="new_grp" translatable="false">New Group</string>
    <string name="add_people" translatable="false">Add People</string>
    <string name="new_conversation" translatable="false">New Conversation</string>
    <string name="scan" translatable="false">Scan QR Code</string>
    <string name="nearby_user" translatable="false">Nearby Team Members</string>
    <string name="beat_list" translatable="false">Beat List</string>
    <string name="device_info" translatable="false">Device Info.</string>
    <string name="share_log" translatable="false">Share Logs</string>
    <string name="order_date" translatable="false">Order Date:</string>
    <string name="enter_email" translatable="false">Enter Email ID</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="version_name" translatable="false">Version 9.6.3D</string>
    <string name="Rs340" translatable="false">\u20B9 340</string>
    <string name="reorder" translatable="false">Reorder</string>
    <string name="order_no" translatable="false">Order No:</string>
    <string name="action" translatable="false">Action</string>
    <string name="date_time" translatable="false">Date Time</string>
    <string name="attachment" translatable="false">Attachment</string>
</resources>