<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/attendance_top_bar_color"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp">

    <com.rubyfood.widgets.AppCustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/date_time"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold" />

    <com.rubyfood.widgets.AppCustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/attachment"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold" />

    <com.rubyfood.widgets.AppCustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/action"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        android:visibility="visible" />
</LinearLayout>
