<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_shopImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_image_upload_icon"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_new_login_bg">

            <com.rubyfood.widgets.AppCustomTextView
                android:id="@+id/version_name_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/version_name"
                android:textSize="@dimen/_10sdp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                >

                <com.rubyfood.widgets.AppCustomTextView
                    android:id="@+id/app_title_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/default_text_color"
                    android:textSize="@dimen/_15sdp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/login_LL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/light_gray"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <com.rubyfood.widgets.AppCustomEditText
                            android:id="@+id/username_EDT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textSize="@dimen/_13sdp"
                            app:theme="@style/EvoEditTextTheme" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/light_gray"
                        app:passwordToggleEnabled="true"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password_EDT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textSize="@dimen/_13sdp"
                            app:theme="@style/EvoEditTextTheme" />

                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cb_remember_me"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/remember_me"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_11sdp"/>


                   <com.rubyfood.widgets.AppCustomTextView
                       android:id="@+id/share_log_login_TV"
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:drawableStart="@drawable/ic_share_svg"
                       android:gravity="center"
                       android:text="@string/share_log"
                       android:textColor="#084e8b"
                       android:textStyle="bold"
                       android:textSize="@dimen/_12sdp"
                       android:visibility="gone"
                       android:layout_alignParentRight="true"
                       android:drawablePadding="5dp"/>

                    </RelativeLayout>



                    <com.rubyfood.widgets.AppCustomTextView
                        android:id="@+id/login_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_80sdp"
                        android:layout_marginRight="@dimen/_80sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/selector_blue_botton_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <com.rubyfood.widgets.AppCustomTextView
                        android:id="@+id/forgot_password_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@color/default_text_color"
                        android:textSize="@dimen/_11sdp"
                        android:visibility="gone" />

                    <!--<com.rubyfood.widgets.AppCustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/login_logout_msg"
                        android:textColor="@color/default_text_color"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"/>

                    <com.rubyfood.widgets.AppCustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:gravity="center"
                        android:text="Internet connection strength is good, you can login now"
                        android:textColor="@color/default_text_color"
                        android:textSize="@dimen/_11sdp" />-->

                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        wheel:matProg_barColor="@color/default_text_color"
        wheel:matProg_progressIndeterminate="true" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/alert_snack_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <com.rubyfood.widgets.AppCustomTextView
        android:id="@+id/tv_internet_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/green"
        android:text="@string/login_logout_msg"
        android:textColor="@color/white"
        android:padding="@dimen/_10sdp"/>

</RelativeLayout>