<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_3sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvOrderNumber"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="568GH768FG"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:maxLines="1"
                    android:ellipsize="end"/>


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvOrderPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/Rs340"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_5sdp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvOrderDate"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="25 Jan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:maxLines="1"
                    android:ellipsize="end"/>


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reorder"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:textSize="@dimen/_12sdp"
                    android:background="@drawable/shape_shop_order_bg"/>
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>