<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_white_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_calendar_icon"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_calendar"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/_5sdp"/>

            <com.rubyfood.widgets.AppCustomTextView
                android:id="@+id/dialog_header_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_close_icon"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_no"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:visibility="gone"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp"
            android:background="@drawable/gradient_bottom"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rubyfood.widgets.AppCustomTextView
                android:id="@+id/dialog_content_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/enter_email"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_edt_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColorHint="@color/light_gray"
                android:visibility="gone"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.rubyfood.widgets.AppCustomEditText
                    android:id="@+id/et_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:textSize="@dimen/_13sdp"
                    android:maxLines="7"
                    android:maxLength="500"
                    app:theme="@style/EvoEditTextTheme" />

            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottom_layout_LL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.rubyfood.widgets.AppCustomTextView
                android:id="@+id/cancel_TV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/cancel"
                android:background="@drawable/selector_order_history_bg"
                android:textColor="@drawable/selector_text_clor_blue_white"
                android:textSize="@dimen/_13sdp" />

            <com.rubyfood.widgets.AppCustomTextView
                android:id="@+id/ok_TV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textSize="@dimen/_13sdp"
                android:gravity="center"
                android:background="@drawable/selector_order_history_bg"
                android:textColor="@drawable/selector_text_clor_blue_white"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>